src/main/kotlin/com/example/api_tfg/error/ErrorRespuesta.kt
package com.example.api_tfg.error

data class ErrorRespuesta(val message: String, val uri: String) {
}